
##Release 1.3.0 Features##

* Added the servers:rebuild command
* Allow the user to override the mime type with the -m option during copy command
* Added option to print the SSL and non-SSL URLs for CDN objects with the cdn:containers:location command and the -s option
* CDN add and remove now take multiple arguments
* Massive updates to the help text
* Allow the default account to be set to any account that is configured
* Support for cross tenant ACLs is now supported with the acl:grant and acl:revoke commands
* Support for bootable volumes has been added with the volumes:add to create the bootable volumes and servers:add to crerate a server from the volume.

###Known Issues###

* The syntax of the servers:add command has changed.  The image or volume now must be passed in with a -i or -v option
* The output of the acl command is now a table

##Release 1.2.0 Features##

* Requires [Fog v0.0.17](https://docs.hpcloud.com/bindings/fog/install)
* Support for adding Windows servers from existing windows images 
* Support for creating and removing server image snapshots
* Support for creating a [Temporary URL](https://docs.hpcloud.com/cli/unix/object-storage#TmpurlCommand) for a file or object for sharing purposes
* Generated reports and CLI arguments have been standardized for the following:
  - addresses
  - flavors
  - keypairs
  - security groups
  - servers
  - object store commands

###Known Issues###

* None

##Release 1.1.0 Features##

* The following additions and modifications to the `config:list` command to support multiple account files:
  - `account:list` command that lists accounts and shows account settings
  - `account:update` command to modify accounts settings
  - `account:remove` command to remove accounts
  - `account:use` command to makes the specified account default
  - `account:copy` command to copy an account file
* `-a` option to select an account on which to perform tasks
* `config:set` command now accepts name value pairs