@@ -6,6 +6,7 @@ require 'hpcloud/accounts'
 require 'hpcloud/acl'
 require 'hpcloud/addresses'
 require 'hpcloud/address_helper'
+require 'hpcloud/checker'
 require 'hpcloud/config'
 require 'hpcloud/flavor_helper'
 require 'hpcloud/flavors'
