@@ -1,5 +1,5 @@
 module HP
   module Cloud
-    VERSION = '1.3.0'
+    VERSION = '1.2.0'
   end
 end
