@@ -1,6 +1,7 @@
 
 ##Release 1.3.0 Features##
 
+* Requires [Fog v0.0.18](https://docs.hpcloud.com/bindings/fog/install)
 * Added the servers:rebuild command
 * Allow the user to override the mime type with the -m option during copy command
 * Added option to print the SSL and non-SSL URLs for CDN objects with the cdn:containers:location command and the -s option
